@@ -1,6 +1,7 @@
 1.2.1 (10.01.2014):
 
 * Fixed opening saved sessions
+* Fixed storing resolution of scanned images
 
 
 1.2.0 (23.11.2013):
